[tool.poetry]
name = "pywhere39"
version = "0.0.1"
description = "Use BIP39 words to locate anywhere in the world"
authors = ["Dominik Kozaczko <dominik@kozaczko.info>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = "^19.10b0"
pre-commit = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.cache
    | \.eggs
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/

)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = false
line_length = 88
known_first_party = ["pywhere39"]
known_third_party = ["click", "pytest"]
